<resources>

    <string name="app_name">ReminderApp</string>
    <string name="app_nav_graph">App Nav Graph</string>
    <string name="google_map_key">AIzaSyCePCYsUTI78pdzIaNE-0zy86jkATJexdI</string>

    <string name="app_name_splash">Appname</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="dummy_text">Simply dummy text of the printing and type setting industry, Lorem Ipsum dummy text and many more text</string>
    <string name="sign_in">Sign in</string>
    <string name="email_phone">Email/Phone</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have an account? SignUp</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_with_privacy_policy">I agree with privacy policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="did_t_receive_the_otp">Did\'t receive the OTP?</string>
    <string name="_hash">#</string>
    <string name="send">Send</string>
    <string name="about">About</string>
    <string name="lorem_ipsum_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
        Where can I get some?</string>
    <string name="about_us">About Us</string>
    <string name="enter_your_email_or_phone">Enter your Email/Phone and we will send you otp to reset your password</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="please_note_that">Please note that when changing your password, we ask you to set yourself a secure password that contains both</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="expiring_products">Expiring Products</string>
    <string name="search">Search</string>
    <string name="menu_home">HOME</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_shopping_list">SHOPPING LIST</string>
    <string name="menu_all_category">ALL CATEGORY</string>
    <string name="menu_rate_us">RATE US</string>
    <string name="menu_share">SHARE</string>
    <string name="menu_about_us">ABOUT US</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="john_doe">John Doe</string>
    <string name="email">Email</string>
    <string name="john_gmail_com">john@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="stars">**********</string>
    <string name="settings">Settings</string>
    <string name="set_currency">Set Currency</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="available_now">Available Now</string>
    <string name="_5kg">5kg</string>
    <string name="finish">Finish</string>
    <string name="half">Half</string>
    <string name="full">Full</string>
    <string name="shopping">Shopping</string>
    <string name="category_name">Category Name</string>
    <string name="category_image">Category Image</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="time">Time</string>
    <string name="reminder">Reminder</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product Category</string>
    <string name="product_expiry_date">Product Expiry Date</string>
    <string name="note">Note</string>
    <string name="set_alarm_reminder">Set Alarm/Reminder</string>
    <string name="_1">1</string>
    <string name="product_qty">Product Qty</string>
    <string name="product_unit_price">Product Unit Price</string>
    <string name="product_list_total">Product List Total</string>
    <string name="product_rating">Product Rating</string>
    <string name="product_image">Product Image</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
</resources>