<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/partial_toolbar_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_product_one" />

            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomTextViewMedium"
                    android:layout_centerVertical="true"
                    android:text="PARACETAMOL IPSUM HAS...."
                    android:textColor="@color/yellow_primary_dark"
                    android:textSize="@dimen/_15sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgCall"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/_3sdp"
                    android:scaleType="center"
                    android:src="@drawable/ic_call_green" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatRatingBar
                style="?android:ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="3"
                android:theme="@style/RatingBar" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CustomTextViewRegular"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="6"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CustomTextViewRegular"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/available_now"
                android:textColor="@color/yellow_primary_dark"
                android:textSize="@dimen/_10sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomTextViewRegular"
                    android:text="@string/finish"
                    android:textSize="@dimen/_8sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomTextViewRegular"
                    android:layout_centerHorizontal="true"
                    android:text="@string/half"
                    android:textSize="@dimen/_8sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomTextViewRegular"
                    android:layout_alignParentEnd="true"
                    android:text="@string/full"
                    android:textSize="@dimen/_8sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvQuantity"
                    style="@style/CustomTextViewRegular"
                    android:text="@string/_5kg"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/tvQuantity"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/custom_progress_seekbar"
                    android:thumb="@null" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CustomTextViewRegular"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/available_now"
                android:textColor="@color/yellow_primary_dark"
                android:textSize="@dimen/_10sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_map_border_black">

                <fragment
                    android:id="@+id/mapFrag"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_1sdp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>