<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/partial_toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_above="@+id/linearCenter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:src="@drawable/ic_forgot_password" />

    <LinearLayout
        android:id="@+id/linearCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CustomTextViewRegular"
            android:text="@string/forgot_your_password"
            android:textColor="@color/yellow_primary_dark"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CustomTextViewRegular"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/enter_your_email_or_phone"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_white_filled"
                android:padding="@dimen/_4sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_email"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    style="@style/CustomEditText"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_toEndOf="@+id/imgEmail"
                    android:ellipsize="end"
                    android:hint="@string/email_phone"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/CustomButtonRound"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/send"
            android:textAllCaps="true" />

    </LinearLayout>

</RelativeLayout>
